# gst-metadata

./: .cppcheck-suppressions  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  gst-metadata.pc.in
.github/workflows/: ci.yml  debug-ci.yml  release.yml
examples/: CMakeLists.txt
examples/include/gst-metadata-examples/: meta_crop.hpp  meta_fov.hpp  meta_imu.hpp
examples/readers/: crop_reader.cpp  fov_reader.cpp  imu_reader.cpp  readers_plugin.cpp
examples/writers/: crop_writer.cpp  fov_writer.cpp  imu_writer.cpp  writers_plugin.cpp
include/gst-metadata/: gst_metadata.hpp  meta_base.hpp  meta_crop.hpp  meta_fov.hpp  meta_imu.hpp
test/: CMakeLists.txt  integration_test.sh  test_edge_cases.cpp  test_fuzz.cpp  test_meta_compose.cpp
